# sound-realty-ml-service

./: .bumpversion  .bumpversion.cfg  .dockerignore  .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  api.Dockerfile  hit_api.py  main.py  pyproject.toml
.github/workflows/: ci-cd-pipeline.yml
api/endpoints/: predictions.py
api/models/: basic_prediction_input.py  prediction_input.py  prediction_output.py
eda/: README.md  requirements.txt
eda/data/: performance_data.csv
eda/notebooks/: 2. Testing the Model.ipynb
kubernetes/: deployment.yaml  hpa.yaml  service.yaml
local_dev/: jupyter.Dockerfile  my_tasks.md  requirements.txt
local_dev/notebooks/: 2. Testing the Model.ipynb
models/versions/2/: model_features.json
tests/: test_api_endpoints.py  test_models.py
training/: create_model.py
