[project]
name = "sound_realty_ml_service"
version = "0.0.0"
description = "An API that make Real Estate price predictions"
authors = [{ name = "Rodrigo Cunha", email = "rdr.cunha@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["fastapi", "api", "machine learning"]
dependencies = [
    "fastapi==0.110.1",
    "uvicorn==0.29.0",
    "pydantic==2.6.4",
    "pandas==2.1.1",
    "joblib==1.3.2",
    "scikit-learn==1.3.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "black>=24.3.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
]

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''
/(
    \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | venv
  | local_dev
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
src_paths = ["api", "tests"]
line_length = 88
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true

[tool.pytest.ini_options]
addopts = "-vv --cov-report term-missing --cov-report xml --cov=api --junitxml=report.xml"
testpaths = [
    "tests",
]


